# icebreaker-rs

./: .gitmodules
firmware/: Cargo.toml
firmware/examples/: oled_pmod.rs
firmware/src/: main.rs
litex-hal/: Cargo.toml  build.rs
litex-hal/src/: clock.rs  delay.rs  gpio.rs  lib.rs  prelude.rs  serial.rs  stdout.rs
litex-pac/: Cargo.toml  build.rs  memory.x  soc.svd
litex-pac/src/: lib.rs
litex-pac/src/soc/: metadata.rs  mod.rs
litex-pac/src/soc/instances/: clock.rs  ctrl.rs  gpio.rs  mod.rs  spiflash.rs  timer0.rs  uart.rs  uart_phy.rs
litex-pac/src/soc/peripherals/: clock.rs  ctrl.rs  gpio.rs  spiflash.rs  timer0.rs  uart.rs  uart_phy.rs
soc/: clock.py  gpio.py  soc.py
